welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: value &! is not a member of Boolean
  if (cigars<61 & cigars>39 &!isWeekend || cigars>39 & isWeekend  ){
                            ^