welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (cigars<61 & cigars>39 &!isWeekend || cigars>39 & isWeekend  ){
    return true
  }
  return false
}